x103b_check_compile_output.txt
python :   File "D:\openwebui\core\x87_worker_dispatcher.py", line 5
At D:\openwebui\_patch_inbox\x103b_dispatcher_bom_repair\x103b_dispatcher_bom_repair_check.ps1:19 char:1
+ python -m py_compile $Dispatcher *> $CompileOutput
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "D:\open...her.py", line 5:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file

